--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -5,7 +5,7 @@ on:
     push:
         branches:
             - main
-            - 'features/*'
+            - 'feature/*'
 jobs:
     unit-testing:
         name: Unit Testing
