--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -14,7 +14,15 @@ env:
 jobs:
     unit-testing:
         name: Unit Testing
-        runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            nodejs_version: [18, 19, 20]
+            os: [ubuntu-latest, macos-latest]
+            exclude:
+                - nodejs_version: 18
+                - os: macos-latest
+                
+        runs-on: ${{ matrix.os }}
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -22,7 +30,7 @@ jobs:
             - name: Setup NodeJS Version - 18
               uses: actions/setup-node@v3
               with:
-                  node-version: 18
+                  node-version: ${{ matrix.nodejs_version }}
 
             - name: Install dependencies
               run: npm install
