--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -20,7 +20,7 @@ jobs:
             os: [ubuntu-latest, macos-latest]
             exclude:
                 - nodejs_version: 18
-                - os: macos-latest
+                  os: macos-latest
 
         runs-on: ${{ matrix.os }}
         steps:
