--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -113,14 +113,13 @@ jobs:
             docker images
             docker run --name solar-system-app -d \
               -p 3000:3000 \
-              -e MONGO_URI=$MONGO_URI \
-              -e MONGO_USERNAME=$MONGO_USERNAME \
-              -e MONGO_PASSWORD=$MONGO_PASSWORD \
+              -e MONGO_URI=${{env.MONGO_URI}} \
+              -e MONGO_USERNAME=${{env.MONGO_USERNAME}} \
+              -e MONGO_PASSWORD=${{env.MONGO_PASSWORD}} \
               ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
-              
-            export IP=${docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app}
+            export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
             echo $IP
 
             echo Testing Image URL using wget
-            wget -q -O - 127.0.0.1:300/live | grep live
+            wget -q -O - 127.0.0.1:300/live | grep
 
