--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -121,5 +121,5 @@ jobs:
             echo $IP
 
             echo Testing Image URL using wget
-            wget -q -O - 127.0.0.1:300/live | grep
+            wget -q -O - 127.0.0.1:300/live | grep live
 
