--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -117,10 +117,10 @@ jobs:
               -e MONGO_USERNAME=$MONGO_USERNAME \
               -e MONGO_PASSWORD=$MONGO_PASSWORD \
               ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
-              
+
             export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
             echo $IP
 
             echo Testing Image URL using wget
-            wget -q -o - 127.0.0.1:300/live | grep live
+            wget -q -o - 127.0.0.1:300/live
 
