--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -100,6 +100,13 @@ jobs:
           with:
             username: ${{ vars.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        
+        - name: GHCR login
+          uses: docker/login-action@v2.2.0
+          with:
+            registry: ghcr.io
+            username: ${{ github.repository_owner }}
+            password: ${{ secrets.GITHUB_TOKEN }}
 
         - name: Docker Build for testing
           uses: docker/build-push-action@v4
@@ -124,9 +131,11 @@ jobs:
             echo Testing Image URL using wget
             wget -q -O - 127.0.0.1:3000/live | grep live
 
-        - name: Docker Push
+        - name: Container Registry Push
           uses: docker/build-push-action@v4
           with:
             context: .
             push: true
-            tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+            tags: |
+             ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+             ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
