--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -23,7 +23,7 @@ jobs:
               ports:
                 - 27017:27017
         env:
-          MONGO_URI: 'mongodb+srv://localhost:27017/superData'
+          MONGO_URI: 'mongodb://localhost:27017/superData'
           MONGO_USERNAME: non-prod-user
           MONGO_PASSWORD: non-prod-password
         strategy:
@@ -31,8 +31,8 @@ jobs:
             nodejs_version: [18, 19, 20]
             os: [ubuntu-latest, macos-latest]
             exclude:
-                - nodejs_version: 18
-                  os: macos-latest
+                - nodejs_version: 19
+                - os: macos-latest
 
         runs-on: ${{ matrix.os }}
         steps:
