add new non-prod image

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -19,6 +19,7 @@ jobs:
         services:
           # label of the service container
             mongo-db:
+              # here I should use a ':non-prod' image db (I haven't create it yet)
               image: daliaabbruciati/solar-system:6a9d0c8b6ecb4ef948f8f79f175bb1b9a2115096
               ports:
                 - 27017:27017
@@ -130,6 +131,13 @@ jobs:
             push: false
             tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
 
+        - name: Build a NON-PROD image for testing
+          uses: docker/build-push-action@v4
+          with:
+            context: .
+            push: false
+            tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:non-prod
+
         - name: Docker Image Test
           run: |
             docker images
@@ -145,6 +153,22 @@ jobs:
 
             echo Testing Image URL using wget
             wget -q -O - 127.0.0.1:3000/live | grep live
+        
+        - name: Docker Image NON-PROD Test
+          run: |
+            docker images
+            docker run --name solar-system-app -d \
+              -p 3001:3000 \
+              -e MONGO_URI=$MONGO_URI \
+              -e MONGO_USERNAME=$MONGO_USERNAME \
+              -e MONGO_PASSWORD=$MONGO_PASSWORD \
+              ${{ vars.DOCKERHUB_USERNAME }}/solar-system:non-prod
+
+            export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+            echo $IP
+
+            echo Testing Image URL using wget
+            wget -q -O - 127.0.0.1:3001/live | grep live
 
         - name: Container Registry Push
           uses: docker/build-push-action@v4
@@ -153,4 +177,5 @@ jobs:
             push: true
             tags: |
              ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+             ${{ vars.DOCKERHUB_USERNAME }}/solar-system:non-prod
              ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
