--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -25,8 +25,8 @@ jobs:
                 - 27017:27017
         env:
           MONGO_URI: 'mongodb://localhost:27017/superData'
-          MONGO_USERNAME: non-prod-user
-          MONGO_PASSWORD: non-prod-password
+          MONGO_USERNAME: ${{vars.MONGO_USERNAME}}
+          MONGO_PASSWORD: ${{secrets.MONGO_PASSWORD}}
         strategy:
           matrix:
             nodejs_version: [18, 19, 20]
