--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -79,8 +79,8 @@ jobs:
                 --name mongo
         env:
           MONGO_URI: 'mongodb://mongo:27017/superData'
-          MONGO_USERNAME: non-prod-user
-          MONGO_PASSWORD: non-prod-password
+          MONGO_USERNAME: ${{vars.MONGO_USERNAME}}
+          MONGO_PASSWORD: ${{secrets.MONGO_PASSWORD}}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
